[package]
name = "vv"
description = "Vote Viewer"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
clap = "2.33.3"
criterion-stats = "0.3.0"
futures-util = "0.3.19"
solana-clap-utils = "=1.10.0"
solana-cli-config = "=1.10.0"
solana-client = "=1.10.0"
solana-logger = "=1.10.0"
solana-remote-wallet = "=1.10.0"
solana-sdk = "=1.10.0"
solana-transaction-status = "=1.10.0"
solana-vote-program = "=1.10.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
solana-validator = "=1.10.0"
